--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,103 @@
-/* You can add global styles to this file, and also import other style files */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
+
+html {
+  font-family: 'Roboto', sans-serif;
+}
+
+/*
+  stretch document to fill full window height
+  */
+
+html, body {
+  height: 100%;
+}
+
+/*
+  override user-agent stylesheet
+  */
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+/*
+  helper classes
+  */
+
+.text-center {
+  text-align: center;
+}
+
+.valign-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.full-height {
+  height: 100%;
+}
+
+.full-width {
+  width: 100%;
+  overflow: hidden;
+}
+
+/*
+  pill component
+ */
+.pill {
+  padding: 16px;
+  background-color: #b3e5fc;
+  border: 1px solid rgba(0,0,0,.2);
+}
+/* dirty little stuff for purpose of this demo */
+@media only screen and (max-width: 720px) {
+  li:not(:nth-child(1)) > .pill {
+    border-top-width: 0;
+  }
+}
+
+/*
+  grid system
+  */
+
+.row {
+  margin-left: -8px;
+  margin-right: -8px;
+}
+.row:after {
+  display: block;
+  content: "";
+  clear: both;
+}
+
+[class^=col-] {
+  float: left;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.col-sm-full {
+  width: 100%;
+}
+
+
+@media only screen and (min-width: 721px) {
+  .col-lg-2 {
+    width: 50%;
+  }
+}
