fixing stuff due to ng-material update

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <div class="full-width text-center">
     <div *ngIf="!loaded">
       <h2>Cargando...</h2>
-      <md-spinner></md-spinner>
+      <mat-spinner></mat-spinner>
     </div>
     <div *ngIf="loaded">
       <h2>Listado de fabricantes de aviones ftw!</h2>
